# mofa-studio

./: Cargo.toml  pixi.toml
.github/workflows/: ci.yml  nix-flake-check.yml  node-hub-rust-ci.yml  pixi-python-tests.yml
apps/mofa-asr/dataflow/: asr-dual.yml  asr-dynamic.yml  asr-nano-mlx.yml
apps/mofa-asr/src/: dora_integration.rs
apps/mofa-asr/src/screen/: design.rs  log_panel.rs  mod.rs
apps/mofa-debate/dataflow/: debate_config_con_deepseek.toml  debate_config_judge_deepseek.toml  debate_config_pro_deepseek.toml  voice-chat-linux.yml  voice-chat.yml
apps/mofa-debate/src/: dora_integration.rs
apps/mofa-debate/src/screen/: audio_controls.rs  dora_handlers.rs  log_panel.rs  mod.rs
apps/mofa-fm/dataflow/: voice-chat-funasr-nano-mlx.yml  voice-chat-mlx.yml  voice-chat-nano-mlx.yml  voice-chat.yml
apps/mofa-fm/src/: dora_integration.rs
apps/mofa-fm/src/screen/: audio_controls.rs  dora_handlers.rs  log_panel.rs  mod.rs
libs/mofa-metrics/: Cargo.toml
libs/mofa-metrics/src/: lib.rs  server.rs  store.rs  types.rs
mofa-dora-bridge/: Cargo.toml
mofa-dora-bridge/src/: dispatcher.rs  lib.rs  shared_state.rs
mofa-dora-bridge/src/widgets/: aec_input.rs  prompt_input.rs
mofa-studio-shell/src/: app.rs
mofa-widgets/src/: app_trait.rs  audio_player.rs
node-hub/dora-funasr-mlx/dataflow/: test-asr-mlx.yml
node-hub/dora-funasr-mlx/src/: main.rs
node-hub/dora-funasr-nano-mlx/dataflow/: test-funasr-nano-mlx.yml
node-hub/dora-gpt-sovits-mlx/dataflow/: test-tts.yml
node-hub/dora-maas-client/: Cargo.toml  test_streaming.rs
node-hub/dora-qwen3-asr-mlx/: Cargo.toml
node-hub/dora-qwen3-asr-mlx/src/: config.rs  main.rs
node-hub/dora-qwen3-asr-mlx/src/engines/: mod.rs  qwen3_asr.rs
node-hub/dora-step-audio2-mlx/dataflow/: test-step-audio2.yml
