[package]
name = "mofa-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Thread-safe metrics store and HTTP/WebSocket API for MoFA Studio Observatory"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "timeout"] }
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
